--- a/package.json
+++ b/package.json
@@ -1,26 +1,70 @@
 {
+  "homepage": "http://Emii1.github.io/react-profile",
   "name": "rectify",
+  
   "version": "0.1.0",
+  
   "private": true,
+  
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+  
+    
+  "dev": "next dev",
+  
+    
+  "build": "next build",
+  
+    
+  "start": "next start",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
+  
+    
+  "lint": "next lint"
+  
   },
+  
   "dependencies": {
-    "firebase": "^9.10.0",
-    "moment": "^2.29.4",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+  
+    
+  "firebase": "^9.10.0",
+  
+    
+  "moment": "^2.29.4",
+  
+    
+  "next": "12.3.1",
+  
+    
+  "react": "18.2.0",
+  
+    
+  "react-dom": "18.2.0",
+  
+    
+  "react-icons": "^4.4.0"
+  
   },
+  
   "devDependencies": {
-    "autoprefixer": "^10.4.12",
-    "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+  
+    
+  "autoprefixer": "^10.4.12",
+  
+    
+  "eslint": "8.24.0",
+  
+    
+  "eslint-config-next": "12.3.1",
+  
+    
+  "gh-pages": "^5.0.0",
+  
+    
+  "postcss": "^8.4.16",
+  
+    
+  "tailwindcss": "^3.1.8"
+  
   }
 }
